// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should add a state when pressed: States Result 1`] = `
{
  "boardId": "",
  "color": "black",
  "id": Any<String>,
  "name": "My new state",
  "position": 0,
}
`;

exports[`should focus on the input component and submit when 'Enter' is pressed: States Result 1`] = `
{
  "boardId": "",
  "color": "black",
  "id": Any<String>,
  "name": "My new state 2",
  "position": 0,
}
`;
